2007-12-21  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl (Version): Support foo1.2.3
	(Package): Support foo1.2.3

	* bin/cygbuild.sh: (CygbuildCygcheckLibraryDepListFull): New,
	replaces `CygbuildObjDumpLibraryDepList'.
	(CygbuildCygcheckLibraryDepMain): Use
	`CygbuildCygcheckLibraryDepListFull'.
	(CygbuildCygcheckLibraryDepMain): Add error checking.
	(CygbuildCygcheckLibraryDepGrepPgkNamesMain): Add error checking.
	(CygbuildVersionInfo): Support foo1.2.3
	(CygbuildFilePackageGuessFromDirectory): Loosend version check.
	(CygbuildCmdInstallCheckPkgDocdir); Ignore certain files.
	(CygbuildHelpShort): Mention long options.
	(CygbuildInstallTaropt2type): New.
	(CygbuildInstallPackageDocs): Improve treatment of
	CYGWIN-PATCHES/install.tar.options
	(CygbuildInstallPackageInfo): Ignore .sinst
	(CygbuildTreeSymlinkCopy): Remove egrep and use find -prune.
	Delete *.dll *.la *.so if included in original package.
	(CygbuildConfCC): Adjust --option list output (perl call).

2007-12-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::QUICK OVERVIEW): Mention command
	`almostall'.

	* bin/cygbuild.sh (CygbuildMakefileRunInstallPythonFix):
	Check manual page location and fix it if needed.
	(CygbuildInstallPackageInfo): chnage mkdir(1) to install(1).
	(CygbuildCmdInstallCheckManualPages): Improve missing manual
	page check.
	(CygbuildMakefileRunInstall): Always run
	`CygbuildMakefilePrefixCheck'
	(CygbuildCommandMain): Use quotes.
	(CygbuildHelpLong): Call `CygbuildBootVariablesGlobalShareMain'
	and use $CYGBUILD_STATIC_PERL_MODULE
	(CygbuildCygbuildDefineGlobalSrcOrigGuess): Support *.tgz *.tbz
	(CygbuildTarOptionCompress): Support *.tbz
	(CygbuildInstallPackageDocs): Obey directory references
	like --include=contrib/* and create needed directory.
	(CygbuildCygcheckMain): Send cygcheck output forward.
	(CygbuildCmdInstallCheckPkgDocdir): Add contrib/ dir check.

2007-12-19  Jari Aalto  <jari.aalto@cante.net>
